# MiniSpot

./: CMakeLists.txt  README.md  main.cpp
doc/: Home.md  compatibility.md  creation.md  debug.md  exception.md  jni.md  launcher.md  methodframe.md  verification.md
jre/java/lang/: jre_class.cpp  jre_class.h  jre_core.h  jre_metadata.cpp  jre_metadata.h  jre_object.cpp  jre_object.h
old/share/vm/: VM.cpp  VM.h  main.cpp
old/share/vm/classloader/: ClassFile.cpp  ClassFile.h  ClassLoader.cpp  ClassLoader.h
old/share/vm/global/: GlobalFlags.cpp  GlobalFlags.h  TypeDef.h
old/share/vm/interpreter/: Bytecode.cpp  Bytecode.h  ExecThread.cpp  ExecThread.h  Interpreter.cpp  Interpreter.h  MethodFrame.cpp  MethodFrame.h
old/share/vm/memory/: Heap.cpp  Heap.h  JClassArea.cpp  JClassArea.h  JMethodArea.cpp  JMethodArea.h  Perm.cpp  Perm.h
old/share/vm/native/: JNI.cpp  JNI.h  JNIType.h
old/share/vm/oops/: JClass.cpp  JClass.h  JField.cpp  JField.h  JMethod.cpp  JMethod.h  JObject.cpp  JObject.h  ObjectHeader.cpp  ObjectHeader.h  Symbol.cpp  Symbol.h
old/share/vm/runtime/: osThread.cpp  osThread.h  thread.cpp  thread.h
old/share/vm/util/: SysUtil.cpp  SysUtil.h
old/test/: Hello.java  HelloWindows.java  Inc.java
src/share/vm/classfile/: ClassFile.cpp  ClassFile.h  classFileParser.cpp  classFileParser.h  classLoader.cpp  classLoader.h  classLoaderData.hpp.cpp  classLoaderData.hpp.h  systemDictionary.cpp  systemDictionary.h
src/share/vm/gc/: gcCause.cpp  gcCause.h
src/share/vm/gc/serial/: defNewGeneration.cpp  defNewGeneration.h  tenuredGeneration.cpp  tenuredGeneration.h
src/share/vm/gc/shared/: collectedHeap.cpp  collectedHeap.h  gcCause.h  genCollectedHeap.cpp  genCollectedHeap.h  generation.cpp  generation.h  space.cpp  space.h
src/share/vm/interpreter/: bytecodes.cpp  bytecodes.h
src/share/vm/memory/: memRegion.cpp  memRegion.h  universe.cpp  universe.h
src/share/vm/oops/: instanceKlass.cpp  instanceKlass.h  klass.cpp  klass.h  oop.cpp  oop.h  oopsHierarchy.cpp  oopsHierarchy.h
src/share/vm/prims/: jni.cpp  jni.h  jvm.cpp  jvm.h
src/share/vm/runtime/: arguments.cpp  arguments.h  atomic.cpp  atomic.h  globals.cpp  globals.h  handles.cpp  handles.h  init.cpp  init.h  mutex.cpp  mutex.h  os.cpp  os.h  osThread.cpp  osThread.h  symbol.cpp  symbol.h  thread.cpp  thread.h  vmStructs.cpp  vmStructs.h
src/share/vm/runtime/threads/: javaThread.cpp  javaThread.h  namedThread.cpp  namedThread.h  osThread.cpp  osThread.h  thread.cpp  thread.h  vmThread.cpp  vmThread.h
src/share/vm/utilities/: debug.cpp  debug.h  exceptions.cpp  exceptions.h  globalDefinitions.cpp  globalDefinitions.h  ostream.cpp  ostream.h  sysUtil.cpp  sysUtil.h  vmError.cpp  vmError.h
src/test/: Add.java  Inc.java
